--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="script.js"></script>
 </head>
 <body>
-    
+    <button type="button" class="button rock">Rock</button>
+    <button type="button" class="button paper">Paper</button>
+    <button type="button" class="button scissor">Scissor</button>
 </body>
 </html>
