--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <button type="button" class="button rock">Rock</button>
-    <button type="button" class="button paper">Paper</button>
-    <button type="button" class="button scissor">Scissor</button>
+    <div class="button-container">
+        <button type="button" class="button rock">Rock</button>
+        <button type="button" class="button paper">Paper</button>
+        <button type="button" class="button scissor">Scissor</button>
+    </div>
+    <div class="score-container"></div>
+    <div class="announcer"></div>
 </body>
 </html>
