Add div with round class

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <button type="button" class="button paper">Paper</button>
         <button type="button" class="button scissor">Scissor</button>
     </div>
+    <div class="round"></div>
     <div class="score-container"></div>
     <div class="announcer"></div>
 </body>
